--- a/style.css
+++ b/style.css
@@ -137,8 +137,8 @@ body{
 .social-icons a.yt i{
   color: #ff0000;
 }
-.social-icons a.git i {
-  color: black;
+.social-icons a.wa i {
+  color: green;
 }
 
 
